Jann 30/objects/CRS_Business_Unit__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Business Unit External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Business_Unit_Name__c</fullName>
        <label>Business Unit Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Group</label>
        <referenceTo>CRS_Group__c</referenceTo>
        <relationshipLabel>Business Units</relationshipLabel>
        <relationshipName>Business_Units</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentGroup__c</fullName>
        <formula>Group__r.MappingId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentGroup</label>
        <type>Text</type>
    </fields>
    <label>Business Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Business_Unit_Name__c</columns>
        <columns>Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Unit ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>